Fix POTD in lock screen

Summary:
1. POTD was cached in `~/.cache/`. But lock screen seems not a process
of current user, so it won't find the cache in user's home dir. So I
changed cache location to `/tmp` and it starts to work.
2. Flickr and APOD(NASA) providers cannot cache pictures in `PNG` but
`JPEG` works. So I simply changed the cache format to `JPEG`. Most POTD
are photos. JPEG saves more spaces.
3. Added a KDED module to cache lockscreen POTD, because lockscreen
program doesn't have internet access.

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29140

Merge Request: https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/3

BUG: 389962

FIXED-IN: 5.20